# coaiapy

./: .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CLI_ENV_REFACTOR_SUMMARY.md  CNAME  DOCUMENTATION_UPDATE_SUMMARY.md  ENVIRONMENT_VARIABLES_REFERENCE.md  FIX_SUMMARY.md  FIX_SUMMARY_REDIS.md  GEMINI.md  ISSUE_251107_coaia_tash_fetch.COMPLEMENT.md  ISSUE_251107_coaia_tash_fetch.md  ISSUE_48_COMMENT_SUPPORT_SUMMARY.md  LAUNCH__session_id__coaiaFuseTracePatchOutput_2511112034.sh  LAUNCH__session_id__issue_65__Medias_Support_2511161357.sh  MEDIA_UPLOAD_GUIDE.md  MIA.md  MIETTE.md  Makefile  NEXT_DIRECTIONS.md  NEXT_STEPS.md  README.md  REDIS_CONFIGURATION.md  REDIS_FIX_DOCUMENTATION.md  RELEASEALL_and_UPGRADE_all_ENV.sh  REPORT.GEMINI.250829.md  RESUME_issue_49__251030.sh  ROADMAP.md  ROADMAP_MEDIA_PIPELINE.md  SUPPORTED_VARIABLES.txt  TRACE_LISTING_IMPLEMENTATION.md  TRACE_PATCHING.md  UPDATE_NOTES.md  USAGE_EXAMPLES.md  VALIDATION_REPORTS.md  VISUAL_COMPARISON.md  __INSTALL_in_conda_src.sh  _env.sh  bump.py  (+16 more)
coaiapy-mcp/: .gitignore  CHANGELOG.md  CONFIG_FILES.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LAUNCH__session_id__HighTokenIssuesDisableStuffByDefault_2512021307.sh  MCP_SETUP.md  Makefile  PR_REVIEW.md  README.md  READY_FOR_TESTING.md  REPORT_MANUAL_TESTING.md  ROADMAP.md  TEST_PLAN_v0.1.4.md  USAGE_EXAMPLES.md  _env.sh  add_feature_checks.py  downloaded.trace-report-creation-workflow.json  downloaded.trace-trace-analysis-and-mcp-prompt.json  example_usage.py  mcp-config.json  pyproject.toml  release.sh  requirements.txt  (+6 more)
(+95 files in other folders)
